--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server.js"
+    "start": "nodemon --experimental-json-modules ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,12 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.1"
+    "firebase-admin": "^11.0.0",
+    "knex": "^2.1.0",
+    "mongoose": "^6.4.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
